--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prambanan Enigma</title>
+    <title>Indonesia Leader in Artificial Intelligence Computing | VRAKAI</title>
     <link rel="icon" type="image/png" href="/icon/prambanan.png">
     <link rel="stylesheet" href="./style.css">
 </head>
